# fmodexample

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/yjy/fmodeproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common_platform.cpp  play_sound.cpp
app/src/main/cpp/inc/: fmod_dsp.h  fmod_output.h
app/src/main/java/com/example/yjy/fmodeproject/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/yjy/fmodeproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
